--- a/WebPrototypes/css/uikit.css
+++ b/WebPrototypes/css/uikit.css
@@ -12156,3 +12156,7 @@ td.uk-text-break {
     page-break-after: avoid;
   }
 }
+.lgc-gradient-primary {
+  background-color: #2b7de1;
+  background: linear-gradient(to bottom right, #8fbddc, #0099ff);
+}
