--- a/Website/views/login.pug
+++ b/Website/views/login.pug
@@ -5,7 +5,11 @@ block content
     .row
       .col-md-6.col-md-offset-3
         h1.display-4.m-b-2 Log In
-        form(method='POST' action='/users/login')
+        if(message != "") 
+          p Message: #{message}
+
+        form(method='POST' action='/signin')
+
           div.form-group
             label(for='email') Email
             input.form-control(type='text' id='email' placeholder='email' name='email')
