Updated basic login mechanism

--- a/Website/views/login.pug
+++ b/Website/views/login.pug
@@ -5,8 +5,8 @@ block content
     .row
       .col-md-6.col-md-offset-3
         h1.display-4.m-b-2 Log In
-        if(message != "") 
-          p Message: #{message}
+
+        p #{message}
 
         form(method='POST' action='/signin')
 
