--- a/Website/views/layout.pug
+++ b/Website/views/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/uikit.min.css')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    script(src='js/uikit.min.js')
+    script(src='js/uikit-icons.min.js')
   body
     block content
