--- a/Website/views/wordzoo_layout.pug
+++ b/Website/views/wordzoo_layout.pug
@@ -16,11 +16,21 @@ html
         li(class='uk-active')
           a(href='#') Home
         li
-          a(href='#') Item 2
+          a(href='#') About Wordzoo
           div(class='uk-navbar-dropdown')
             ul(class='uk-nav uk-navbar-dropdown-nav')
               li(class='uk-active')
                 a(href='#') Item 1
+              li
+                a(href='#') Item 2
+              li
+                a(href='#') Item 3
+        li
+          a(href='/signin') Teacher Sign-In
+          div(class='uk-navbar-dropdown')
+            ul(class='uk-nav uk-navbar-dropdown-nav')
+              li(class='uk-active')
+                a(href='/games/menu') Games
               li
                 a(href='#') Item 2
               li
