basic models and routes

--- a/Website/assets/styles/importer.less
+++ b/Website/assets/styles/importer.less
@@ -28,3 +28,4 @@
 // @import 'pages/signup.less';
 //
 // etc.
+@import "https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/css/uikit.min.css";
