Basic CRUD admin for school and user

--- a/Website/views/auth/login.ejs
+++ b/Website/views/auth/login.ejs
@@ -1,11 +1,11 @@
 <h1>Login</h1>
 <form action="/login" method="post">
 
-  <label for="email">Your email address?</label>
+  <label for="email">Email:</label>
   <input name="email" type="text"/>
   <br/>
 
-  <label for="password">Your safe word?</label>
+  <label for="password">Password:</label>
   <input name="password" type="password"/>
   <br/>
 
