--- a/Website/views/admin/users.ejs
+++ b/Website/views/admin/users.ejs
@@ -1,6 +1,6 @@
 <h1>Manage Users</h1>
 <ul>
   <% _.each(users, function (user) { %>
-    <li><%= user.name %> - <a href="#">Edit</a></li>
+    <li><%= user.name %> - <a href="/admin/users/<%= user.id %>">Edit</a></li>
     <% }) %>
 </ul>
