--- a/Website/views/layout.ejs
+++ b/Website/views/layout.ejs
@@ -39,8 +39,8 @@
       <img width="400" src="/images/WordZoo_logo.png" />
       <div  class="menu">
       <ul>
-        <% if(req.session.me == null) { %><li><a href="/login">Log In</a></li>
-        <% }  else { %><li><a href="#">Welcome <%= req.session.me %></a></li><% } %>
+        <% if(!req.session.isLoggedIn) { %><li><a href="/login">Log In</a></li>
+        <% }  else { %><li><a href="#">Welcome <%= req.session.user.name %></a></li><% } %>
         <li><a href="/signup">Sign Up</a></li>
         <li>
           <a href="/admin">Admin Home</a>
