--- a/Website/views/admin/schoolPupils.ejs
+++ b/Website/views/admin/schoolPupils.ejs
@@ -1,5 +1,5 @@
 <h1>Manage School</h1>
-<h2><a href="/admin/schools/<%= school.id %>/edit/">Manage School</a></h2>
+<h2><a href="/admin/schools/<%= school.id %>/">Manage Classes</a></h2>
 <h2>New Class</h2>
 <form method="post" >
   <input type="text" name="name" placeholder="Name" value="" />
@@ -14,4 +14,9 @@
   </select>
   <input type="submit" value="Save" />
 </form>
-<h2>All Classes</h2>
+<h2>All Classes (<%= school.classes.length %>)</h2>
+<ul>
+  <% _.each(school.classes, function (group) { %>
+  <li><%= group.name %></li>
+  <% }) %>
+</ul>
