--- a/Website/views/admin/schoolPupils.ejs
+++ b/Website/views/admin/schoolPupils.ejs
@@ -1,5 +1,5 @@
 <h1>Manage School</h1>
-<h2><a href="/admin/schools/<%= school.id %>/">Manage Classes</a></h2>
+<h2><a href="/admin/schools/<%= school.id %>/classes">Manage Classes</a></h2>
 <h2>New Class</h2>
 <form method="post" >
   <input type="text" name="name" placeholder="Name" value="" />
@@ -10,13 +10,17 @@
   <input type="text" name="name" placeholder=" Name" value="<%= school.name ? school.name : ''  %>" />
   <input type="text" name="dob" placeholder="01/01/2014" value="<%= school.phone ? school.phone : ''  %>" />
   <select name="class_id">
+    <% _.each(school.classes, function (group) { %>
+    <option value="<%= group.id %>"><%= group.name %></option>
+    <% }) %>
     <option value="-1">No Class</option>
+
   </select>
   <input type="submit" value="Save" />
 </form>
 <h2>All Classes (<%= school.classes.length %>)</h2>
 <ul>
   <% _.each(school.classes, function (group) { %>
-  <li><%= group.name %></li>
+  <li><%= group.name %> <a href="/admin/schools/<%= school.id %>/classes/<%= group.id %>">Manage Class</a></li>
   <% }) %>
 </ul>
