--- a/Website/assets/styles/general.css
+++ b/Website/assets/styles/general.css
@@ -1,8 +1,15 @@
+.menu {
+  width: 100%;
+  display: block;
+  height: 64px;
+}
+
 .menu ul {
   list-style: none;
   margin: 0;
   padding: 0;
   z-index: 5;
+
 }
 
 .menu ul li {
