--- a/Website/views/teacher/home.ejs
+++ b/Website/views/teacher/home.ejs
@@ -1,1 +1,7 @@
 <h1>Hello <%= req.user.name %></h1>
+<h2>Classes at <%= school.name %></h2>
+<ul>
+  <% _.each(school.classes, function (schoolClass) { %>
+  <li><a href="/teach/class/<%=schoolClass.id%>/"><%= schoolClass.name %> &raquo;</a></li>
+  <% }) %>
+</ul>
