Game selection / playing

--- a/Website/views/layout.ejs
+++ b/Website/views/layout.ejs
@@ -51,9 +51,9 @@
           <a href="/admin">Admin Home</a>
           <ul><li><a href="/admin/users">Manage Users</a></li>
             <li><a href="/admin/schools">Manage Schools</a></li>
-            <li><a href="#">Data Tools</a></li>
-            <li><a href="#">Manage Games</a></li>
-            <li><a href="#">Play Game</a></li>
+            <li><a href="#">Data Tools *</a></li>
+            <li><a href="/admin/games">Manage Games</a></li>
+            <li><a href="#">Test Game *</a></li>
           </ul>
         </li>
         <% }
