--- a/Website/views/teacher/class.ejs
+++ b/Website/views/teacher/class.ejs
@@ -2,6 +2,6 @@
 <h2><%= schoolClass.pupils.length %> pupils </h2>
 <ul>
   <% _.each(schoolClass.pupils, function (pupil) { %>
-  <li><%= pupil.name %> <a href="/teach/start"> Start Session &raquo;</a></li>
+  <li><%= pupil.name %> <a href="/teach/start/<%=pupil.id%>"> Start Session &raquo;</a></li>
   <% }) %>
 </ul>
