--- a/Website/views/teacher/class.ejs
+++ b/Website/views/teacher/class.ejs
@@ -1,5 +1,10 @@
 <h1><%= schoolClass.name %></h1>
 <h2><%= schoolClass.pupils.length %> pupils </h2>
+<form method="post" action="/teach/class/<%=schoolClass.id%>/newpupil">
+  <input type="text" name="name" placeholder=" Name" value="" />
+  <input type="text" name="dob" placeholder="01/01/2014" value="" />
+  <input type="submit" value="Save" />
+</form>
 <table>
   <tr>
     <td>Name</td>
@@ -10,9 +15,9 @@
   <% _.each(schoolClass.pupils, function (pupil) { %>
   <tr>
     <td><%= pupil.name %> </td>
-    <td><%= pupil.first_name %> </td>
+    <td><%= pupil.username %> </td>
     <td><%= pupil.passcode %> </td>
-    <td><a href="/teach/start/<%=pupil.id%>"> Start Session &raquo;</a></td>
+    <td><a href="/teach/start/<%=pupil.id%>"> Start Session &raquo;</a> <form method="post" action="/teach/class/<%=schoolClass.id%>/regenerate"><input type="hidden" name="pupilid" value="<%=pupil.id%>"/><input type="submit" value="New Password"/></form></td>
   </tr>
   <% }) %>
 </table>
