--- a/Website/assets/styles/general.css
+++ b/Website/assets/styles/general.css
@@ -1,3 +1,12 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.39/css/uikit.min.css");
+body,html {
+  min-height: 100%;
+}
+
+.logo {
+  text-align: center;
+}
+
 .menu {
   width: 100%;
   display: block;
