--- a/Website/views/teacher/class.ejs
+++ b/Website/views/teacher/class.ejs
@@ -1,3 +1,6 @@
+<div class="uk-section uk-background-cover uk-light " style="background:url('https://blog.wordzoo.co.uk/wp-content/uploads/revslider/splash-creative-light-01-animated/Slider-CL01-Background.png'); min-height:1400px;">
+    <div class="uk-container">
+
 <h1><%= schoolClass.name %></h1>
 <h2><%= schoolClass.pupils.length %> pupils </h2>
 <form method="post" action="/teach/class/<%=schoolClass.id%>/newpupil">
@@ -5,7 +8,7 @@
   <input type="text" name="dob" placeholder="01/01/2014" value="" />
   <input type="submit" value="Save" />
 </form>
-<table>
+<table class="uk-table">
   <tr>
     <td>Name</td>
     <td>Login</td>
@@ -21,3 +24,6 @@
   </tr>
   <% }) %>
 </table>
+
+</div>
+</div>
