Account update page

--- a/Website/views/layout_teacher.ejs
+++ b/Website/views/layout_teacher.ejs
@@ -54,7 +54,7 @@
                     </li>-->
 
                     <li>
-                        <a href="#">My Account</a>
+                        <a href="/teach/account">My Account</a>
 
                     </li>
                     <li>
@@ -95,7 +95,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
