--- a/Website/views/student/home2.ejs
+++ b/Website/views/student/home2.ejs
@@ -46,7 +46,7 @@
 
           </a>
         </div>
-  <div id="character" style="max-width:1052px;min-height:580px;display:block" class="uk-padding-small uk-padding-remove-top">&nbsp;</div>
+  <div id="character" style="max-width:1052px;max-height:580px;display:block" class="uk-padding-small uk-padding-remove-top">&nbsp;</div>
         <div id="gameselect" style="display:block;background:url('/stuhome/Scroll/WebContent/assets/carBackground.png');background-repeat:no-repeat;background-position:center center;" class="uk-padding-large">
 <h1 class="uk-text-bold">Games</h1>
           <div uk-slider="autoplay: true;autoplay-interval: 4000;pause-on-hover: true">
@@ -133,7 +133,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
