--- a/Website/views/student/home2.ejs
+++ b/Website/views/student/home2.ejs
@@ -39,14 +39,14 @@
 
     <div class="uk-section uk-margin-remove uk-padding-remove-top uk-background-image uk-light " style="text-align:center;background:url('/images/backgroundMain.png');min-height:100vh;background-size:100% 100%;">
 
-      <div class="uk-margin-large" style="background:url('/images/foregroundBackground.png'); min-height:100vh;display:block;margin:0 auto;width:60%;min-width:1070px;">
+      <div class="uk-margin-large uk-container" style="background:url('/images/foregroundBackground.png'); min-height:100vh;display:block;">
 
-        <div class="" style="background:url('/images/header.png');width:1052px;height:107px;margin:0 auto;">
-          <a href="/logout" style="display:block;background:url('/images/logoutButton.png');width:239px;height:83px;float:right;margin-top:10px;">
-
+        <div class="" style="background:url('/images/header.png');max-width:1052px;background-size:contain;background-repeat:no-repeat;height:107px;margin:0 auto;">
+          <a href="/logout" style="border:4px solid #ff9933 ;border-radius:6px;float:right;display:block; background:linear-gradient(to bottom, #ffe168 , #ffce07);padding:10px;color:#ff9933;margin-top:10px;margin-right:10px;">
+            Log Out
           </a>
         </div>
-  <div id="character" style="max-width:1052px;max-height:580px;display:block" class="uk-padding-small uk-padding-remove-top">&nbsp;</div>
+  <div id="character" style="max-width:1052px;max-height:580px;display:block" class="uk-padding-small uk-padding-remove-top uk-container">&nbsp;</div>
         <div id="gameselect" style="display:block;background:url('/stuhome/Scroll/WebContent/assets/carBackground.png');background-repeat:no-repeat;background-position:center center;" class="uk-padding-large">
 <h1 class="uk-text-bold">Games</h1>
           <div uk-slider="autoplay: true;autoplay-interval: 4000;pause-on-hover: true">
