--- a/Website/views/student/login.ejs
+++ b/Website/views/student/login.ejs
@@ -1,11 +1,7 @@
-<div class="uk-section uk-background-cover uk-light " style="background:url('https://blog.wordzoo.co.uk/wp-content/uploads/revslider/splash-creative-light-01-animated/Slider-CL01-Background.png'); min-height:1400px;">
-    <div class="uk-container">
-      <h1><img class="uk-logo uk-align-center" alt="WordZoo logo" width="800" src="/images/WordZoo_logo.png" />
-      </h1>
-
-    </div>
+<div class="uk-section " style="">
+    
     <div class="uk-container uk-container-small " style="">
-      <p class="uk-text-center"><a class="uk-button" href="/">&laquo; Return to homepage</a></p>
+
       <form  action="/student/login" method="post" class="uk-form-stacked">
         <div class="uk-margin">
             <label class="uk-form-label" for="form-stacked-text">Username</label>
