--- a/Website/views/auth/welcome.ejs
+++ b/Website/views/auth/welcome.ejs
@@ -1,4 +1,9 @@
-<h1>Welcome! You have signed up successfully!</h1>
-
-<a href="/">Back to home page</a>
-<a href="/logout">Log out</a>
+<h1>Welcome to WordZoo</h1>
+<p>Thanks for signing up to WordZoo. </p>
+<% if(req.session.user.teaches_at[0].id==null) { %>
+  <p>You are not currently a member of a school group - please ask your WordZoo coordinator or get in touch with support so you can set this up then you can manage your classes. </p>
+<% } else { %>
+  <p>Please follow a short tutorial to explain the basics of how to use WordZoo</p>
+  <p>At any time using WordZoo you can provide feedback by ... </p>
+  <a href="/">Back to home page</a>
+<% } %>
