--- a/Website/views/student/home2.ejs
+++ b/Website/views/student/home2.ejs
@@ -161,7 +161,7 @@
     -->
     <script src="/stuhome/Scroll/WebContent/lib/phaser.js"></script>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/stuhome/CustomCharacter/WebContent/assets/canvas/LoadingScreen.js"></script>
     <script src="/stuhome/CustomCharacter/WebContent/assets/canvas/Level.js"></script>
     <script src="/stuhome/CustomCharacter/WebContent/js/Main.js"></script>
