Add quiz assets

--- a/Website/views/student/welcome.ejs
+++ b/Website/views/student/welcome.ejs
@@ -1,6 +1,7 @@
-<div class="uk-section uk-background-cover uk-light " style="background:url('https://blog.wordzoo.co.uk/wp-content/uploads/revslider/splash-creative-light-01-animated/Slider-CL01-Background.png'); min-height:1400px;">
-    <div class="uk-container">
-<h1>Welcome to WordZoo</h1>
 
-</div>
-</div>
+        <script src="/stuhome/Quiz/lib/phaser.js"></script>
+        <script src="/stuhome/Quiz/js/Main.js"></script>
+        <script src="/stuhome/Quiz/assets/canvas/LoadingScreen.js"></script>
+        <script src="/stuhome/Quiz/assets/canvas/StartScreen.js"></script>
+        <script src="/stuhome/Quiz/assets/canvas/PlayScreen.js"></script>
+        
