--- a/Website/views/homepage.ejs
+++ b/Website/views/homepage.ejs
@@ -1,12 +1,11 @@
 <div class="uk-section uk-light uk-background-cover " style="background:url('/images/bg1.jpg'); min-height:1400px;">
-    <div class="uk-container">
-      <h1><img class="uk-logo uk-align-center" alt="WordZoo logo" width="800" src="/images/WordZoo_logo.png" />
-      </h1>
-
-    </div>
+  <h1><img class="uk-logo uk-align-center" alt="WordZoo logo" width="800" src="/images/WordZoo_logo.png" />
+  </h1>
+  <a href="/student/login"><img class="uk-align-center" alt="WordZoo Family" width="1000" height="400" src="/images/wordzoo_family.png" /></a>
+     
     <div class="uk-container uk-container-small">
       <h2>Welcome</h2>
-
+      <a class="uk-button uk-button-primary uk-button-large" href="/student/login">Start</a>
       <p>WordZoo is a research project aiming to develop more effective educational games, which engage pupils in their learning and provide useful metrics and feedback to teachers</p>
       <p>If you are interested in testing WordZoo, please <a href="http://blog.wordzoo.co.uk">contact us</a></p>
       <a class="uk-button uk-button-large uk-button-default" href="/login">Sign In as a Teacher</a> <a class="uk-button uk-button-default uk-button-large" href="/student/login">Sign In as a Student</a>
