--- a/Website/views/student/welcome.ejs
+++ b/Website/views/student/welcome.ejs
@@ -1,4 +1,4 @@
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/stuhome/Quiz/lib/phaser.js"></script>
         <script src="/stuhome/Quiz/js/Main.js"></script>
         <script src="/stuhome/Quiz/assets/canvas/LoadingScreen.js"></script>
