--- a/Website/views/layout2.ejs
+++ b/Website/views/layout2.ejs
@@ -92,6 +92,8 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/uikit-icons.min.js"></script>
+    <script src="/js/dependencies/uikit.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
