--- a/Website/views/layout_teacher.ejs
+++ b/Website/views/layout_teacher.ejs
@@ -128,6 +128,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit-icons.min.js"></script>
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/uikit-icons.min.js"></script>
+    <script src="/js/dependencies/uikit.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
