Change passcode to numeric input

--- a/Website/views/student/login.ejs
+++ b/Website/views/student/login.ejs
@@ -12,7 +12,7 @@
         <div class="uk-margin">
             <label class="uk-form-label" for="form-stacked-text">Password</label>
             <div class="uk-form-controls">
-                <input class="uk-input  uk-form-large" id="passcode" name="passcode" type="password" placeholder="Password">
+                <input class="uk-input  uk-form-large" id="passcode" name="passcode" type="number" pattern="[0-9]*" inputmode="numeric" placeholder="Password">
             </div>
         </div>
         <div class="uk-margin">
