Change phaser srcs to single location

--- a/Website/views/teacher/classPhoto.ejs
+++ b/Website/views/teacher/classPhoto.ejs
@@ -6,7 +6,7 @@
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
-<script src="/classphoto/lib/phaser.js"></script>
+<script src="/games/phaser.js"></script>
 <script src="/classphoto/js/Main.js"></script>
 <script src="/classphoto/assets/canvas/LoadingScreen.js"></script>
 <script src="/classphoto/assets/canvas/PlayScreen.js"></script>
