--- a/Website/views/layout_admin.ejs
+++ b/Website/views/layout_admin.ejs
@@ -148,6 +148,8 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/1jquery.js"></script>
+    <script src="/js/dependencies/home.js"></script>
     <script src="/js/dependencies/uikit-icons.min.js"></script>
     <script src="/js/dependencies/uikit.min.js"></script>
     <!--SCRIPTS END-->
