--- a/Website/views/teacher/classPhoto.ejs
+++ b/Website/views/teacher/classPhoto.ejs
@@ -1,7 +1,7 @@
 <div class="uk-section uk-background-cover uk-light " style="background:url('https://blog.wordzoo.co.uk/wp-content/uploads/revslider/splash-creative-light-01-animated/Slider-CL01-Background.png'); min-height:1400px;">
     <div class="uk-container">
 
-<h1><%= schoolClass.name %></h1>
+<a href="/teach/class/<%=schoolClass.id%>/" class="uk-button uk-button-primary">Go Back</a>
 <div id="photo"></div>
 </div>
 </div>
